0.35
- P4A_Table_Col can show image thumbnail: P4A_Table_Col::setType("image")
- P4A_Button can show icon and label at the same time

0.34
- TinyMCE was updated to 2.0.1
- PEAR packages were updated

0.33
- release builder script was updated
- base application was moved to contribs
- print css for P4A_Tab_Pane was added
- some bugfixes/cleanup were done on P4A_Field::getAsRadio()
- P4A_Message::setValue(0) bug was fixed
- removed "clean on startup" option from tinymce, seems to cause ie problems

0.32
- P4A_Tab_Pane was added (Thanks to Francesco Dominidiato)
- enabled rich text editor image resize (documentation on website)
- TinyMCE was updated to 2.0RC4

0.31
- bugfix on P4A_Table, now ordering works well
- bugfix on P4A_DB_Source, now addOrder() and setOrder always turn the ordering mode to uppercase
- PHP 4.4 P4A_Collection::nextItem() bugfix
- rich text editor now support image resizing (libGD support needed) (disabled by now)
- various bugfix and beautification

0.30
- PHP 4.4 porting completed (deep tests are needed)
- sample htaccess was added (needed to set some PHP settings that we can't set at runtime)
- TinyMCE rich text editor was introduced instead FCKEditor
- FCKEditor file browser/upload was integrated in tinyMCE
- P4A_Field::enableUpload() was added
- P4A_Field::enableFileUpload() and P4A_Field::enableImageUpload() were removed
- fixed the setDefaultValue(0) bug
- various bugfixes and code beautification

0.29
- Template engine is now Flexy, many constants in config.php were dropped and template were heavily changed
- ie7 library was updated to 0.9
- P4A_REQUIRE_APPLICATION now supports application name or application dir
- mb_internal_encoding is set to UTF-8 if mbstring extension is available
- P4A_DB_Source::dropOrder() was added
- fixed P4A_Button::getAsString(), when icon is rendered, width and height are printed (now we can only have square icons)
- fixed P4A_Table_Col visibility issues
- fixed a bug about charset in mask's default template